# rtsp-meta-broadcaster

./: CMakeLists.txt  demo.cpp  demo1.cpp  demo2.cpp  main.cpp  reference  rtsp_meta.cpp  test_streamer.cpp
src/: rtsp_factory.cpp  rtsp_factory.h  rtsp_meta_factory.cpp  rtsp_meta_factory.h  rtsp_streamer.cpp  rtsp_streamer.h
